Final commit (for now..)

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -127,7 +127,7 @@ Vector
 
 Since neutrinos are neutral fermions, it is possible that neutrinos are their own antiparticle (a Majorana Particle). This idea was first proposed in 1937 by Majorana \cite{Majorana2020}. Within the \Gls{sm}, all fermions with the possible exception of neutrinos behave as Dirac fermions, that is, the particle and antiparticle are distinct \cite{dirac_majorana_neutrinos}. With the possibility that neutrinos are Majorana in nature, it has led to the search for neutrinoless double beta decay \cite{Double_beta_decay}. This is a variation on ordinary double beta decay in which a nucleus decays by emitting two electrons simultaneously. In ordinary double beta decay, there would also be two (anti)neutrinos in the final state, however, if neutrinos are Majorana particles, it can be thought of as one nucleon emitting a neutrino and the other absorbing it hence there are no neutrinos in the final state. Observation of such a decay would confirm the Majorana nature of neutrinos and give direct evidence for physics beyond the \Gls{sm} since the lepton number would not be conserved. Furthermore, neutrino oscillations (which is discussed in \SectionRef{subsec:Neutrino Oscillations}) are at odds with the \gls{sm} assumption that neutrinos are massless. With the requirement that neutrinos are indeed massive, the Dirac or Majorana nature of neutrinos is again discussed in \SectionRef{subsec:nutrino_mass} within the context of mass generation mechanisms \cite{The_physics_of_neutrinos_book}.
 
-\subsection{Neutrinos within the Standard Model}
+\subsection{Neutrinos Within the Standard Model}
 
 Neutrinos are a class of leptonic particle that only interact via the weak interaction and are considered massless within the \gls{sm}. It has been shown that \gls{cp} violation is allowed and exists within the \gls{sm}, however, the amount observed so far is insufficient to explain the matter-antimatter asymmetry. The amount of \gls{cp} violation associated with neutrinos, if any, is currently unknown, but may help explain the observed asymmetry. 
 
@@ -609,9 +609,9 @@ Assuming that neutrinos are Majorana in nature, neutrinoless double beta decay (
 \begin{equation}
     [T^{0\nu}]^{-1} = G^{0\nu} \cdot |M^{0\nu}|^2 \cdot \langle m_{\beta\beta}\rangle^2,
 \end{equation}
-where, $G^{0\nu}$, is the phase space factor, $M^{0\nu}$, is the matrix element and $\langle m_{\beta\beta}\rangle = \sum_i U^2_{ei}m_i$, which is the effective Majorana neutrino mass. Both $G^{0\nu}$ and $M^{0\nu}$ depend on the nucleus that undergoes the decay. Therefore, measuring the half-life of a $0\nu\beta\beta$ decay process gives a measure of the effective neutrino mass. 
+where, $G^{0\nu}$, is the phase space factor, $M^{0\nu}$, is the matrix element and $\langle m_{\beta\beta}\rangle$ is the effective Majorana neutrino mass which is given by $\langle m_{\beta\beta}\rangle = \sum_i U^2_{ei}m_i$. Both $G^{0\nu}$ and $M^{0\nu}$ depend on the nucleus that undergoes the decay. Therefore, measuring the half-life of a $0\nu\beta\beta$ decay process gives a measure of the effective neutrino mass. 
 
-Some of the most stringent limits on the effective neutrino mass are provided by the KamLAND-Zen experiment. As of yet no $0\nu\beta\beta$ has been observed and a lower bound on the half-life of $2.3 \times 10^{26}$ years at a 90\% confidence level which equates to an upper limit on the effective Majorana neutrino mass of 36 -- 156 meV, depending on the model of the nuclear matrix element \cite{kamlandZen}.
+Some of the most stringent limits on the effective neutrino mass are provided by the KamLAND-Zen experiment. As of yet no $0\nu\beta\beta$ has been observed and a lower bound on the half-life of $2.3 \times 10^{26}$ years at a 90\% confidence level which equates to an upper limit on the effective Majorana neutrino mass of \mbox{36 -- 156 meV}, depending on the model of the nuclear matrix element \cite{kamlandZen}.
 
 \paragraph{Cosmological Constraints}
 A number of cosmological observations have put upper bounds on the neutrino mass. Some of the most stringent constraints come from the \textit{Planck} collaboration which measured temperature anisotropies in the cosmic microwave background \cite{PDG_2022}\cite{planck_2018}. 
@@ -1061,7 +1061,7 @@ where $\theta$ is the active-sterile mixing angle. The signature for the presenc
     \label{fig:katrin_kink_beta_decay}
 \end{figure}
 
-From its second data collection period, \gls{katrin} has analysed $3.76 \times 10^6$ $\beta$-electrons from tritium decays and was sensitive to $m_4^2 \lesssim 1600$ eV$^2$ and $|U_{e4}|^2 \gtrsim 6 \times 10^{-3}$. No signal indicating the presence of light sterile neutrinos was observed and exclusion contours were produced at the 95\% confidence level. Two separate analyses were performed: one where the effective electron neutrino mass, $m_{\nu}^2$, was fixed to zero (which is justified since $m_4 \gg m_{1,2,3}$) and one where $m_{\nu}^2$ is an unconstrained nuisance parameter. The exclusion contours from both cases are shown in \FigureRef{fig:katrin_exclusion_contour} for data from the first and second campaign as well as both campaigns combined \cite{KATRIN_sterile_neutrino_results}. 
+From its second data collection period, \gls{katrin} has analysed $3.76 \times 10^6$ \mbox{$\beta$-electrons} from tritium decays and was sensitive to $m_4^2 \lesssim 1600$ eV$^2$ and \mbox{$|U_{e4}|^2 \gtrsim 6 \times 10^{-3}$}. No signal indicating the presence of light sterile neutrinos was observed and exclusion contours were produced at the 95\% confidence level. Two separate analyses were performed: one where the effective electron neutrino mass, $m_{\nu}^2$, was fixed to zero (which is justified since $m_4 \gg m_{1,2,3}$) and one where $m_{\nu}^2$ is an unconstrained nuisance parameter. The exclusion contours from both cases are shown in \FigureRef{fig:katrin_exclusion_contour} for data from the first and second campaign as well as both campaigns combined \cite{KATRIN_sterile_neutrino_results}. 
 
 \begin{figure}[h!]
     \centering
