--- a/chap6-valor_analysis_2.tex
+++ b/chap6-valor_analysis_2.tex
@@ -1,7 +1,7 @@
 \chapter{SBN Oscillation Analysis Within the VALOR Framework}
 \label{chap:VALOR}
 
-The VALOR framework is a neutrino fitting framework that was first developed for the \gls{t2k} experiment but has since been adapted to also cover, Hyper-Kamiokande, \gls{dune} and the \gls{sbn} program \cite{VALOR}.
+The VALOR framework is a neutrino fitting framework that was first developed for the \gls{t2k} experiment but has since been adapted to also cover Hyper-Kamiokande, \gls{dune} and the \gls{sbn} program \cite{VALOR}.
 
 Performing an analysis within VALOR involves a number of physics parameters that define a physics hypothesis (e.g. neutrino oscillations) and the relevant systematic uncertainties. Event rate predictions are constructed for the associated detector, beam and event sample. These predictions are constructed as a function of a kinematical variable for either a nominal scenario or with variations due to a physics hypothesis and/or systematic uncertainties. This approach allows for joint oscillation and systematic fits to be constructed from a binned likelihood fitting approach for a given event topology. Fits may be performed for individual detectors or for a combination of multiple detectors and may include any number of systematic uncertainties. 
 
@@ -47,7 +47,7 @@ In order to create confidence regions, fits are performed between a certain \tex
 \section{Oscillation Channels Within SBN}
 
 As was discussed in \SectionRef{sec:sbn_physics_capabilities}, the \gls{bnb} is \numu dominated with a small portion of \nue's present. In the presence of mixing with a light sterile neutrino 
-this would result in the disappearance of some percentage of the \numu's due to oscillations. Additionally, \numu to \nue oscillations would result in the increase of the number of \nue's present. Finally, the number of intrinsic \nue's present in the \gls{bnb} coupled with the large event rate \gls{sbn} will detect means there are sufficient statistics to observe the disappearance of some \nue's due to oscillations. This results in three possible oscillation channels, \numu disappearance, \nue appearance and \nue disappearance. The mixing angles which determine their respective oscillation probabilities are shown in Equations (\ref{eqn:sinsq2thmumu} -- \ref{eqn:sinsq2thee}) which also imply that the oscillation channels are coupled (that is the presence of non-zero \nue appearance also requires non-zero \numu disappearance and \nue disappearance). Despite this, currently, the oscillation channels are treated completely independently. In principle oscillations involving \nutau are also possible, but due to the high energy threshold required these are usually not expected to be observed with any significant statistics. The energy range of the \gls{bnb} above the \nutau threshold is of the order 1\%, but since the statistics in \gls{sbnd} are large, this may be sufficient to observe \numu to \nutau appearance. Currently, this channel is not considered in the analysis but may be explored in future work \cite{tau_oscillations}.
+this would result in the disappearance of some percentage of the \numu's due to oscillations. Additionally, \numu to \nue oscillations via sterile neutrinos would result in the increase of the number of \nue's present. Finally, the number of intrinsic \nue's present in the \gls{bnb} coupled with the large event rate \gls{sbn} will detect means there are sufficient statistics to observe the disappearance of some \nue's due to oscillations. This results in three possible oscillation channels, \numu disappearance, \nue appearance and \nue disappearance. The mixing angles which determine their respective oscillation probabilities are shown in Equations (\ref{eqn:sinsq2thmumu} -- \ref{eqn:sinsq2thee}) which also imply that the oscillation channels are coupled (that is the presence of non-zero \nue appearance also requires non-zero \numu disappearance and \nue disappearance). Despite this, currently, the oscillation channels are treated completely independently. In principle oscillations involving \nutau are also possible, but due to the high energy threshold required these are usually not expected to be observed with any significant statistics. The energy range of the \gls{bnb} above the \nutau threshold is of the order 1\%, but since the statistics in \gls{sbnd} are large, this may be sufficient to observe \numu to \nutau appearance. Currently, this channel is not considered in the analysis but may be explored in future work \cite{tau_oscillations}.
 
 The \numu disappearance as well as both the \nue channels have already been explored by a number of different experiments, many of which have been discussed in \SectionRef{subchap:Motivation for Sterile Neutrinos}. This has led to tension due to the conflict between null-results from some experiments and the hints of possible mixing with light sterile neutrinos seen by others. \gls{sbn} will be particularly sensitive to the \numu disappearance and \nue appearance channels due to the high flux of \numu's observed which will allow for the \gls{lsnd} and \gls{miniboone} anomalies to be investigated. Additionally, \gls{sbn} will be simultaneously sensitive to \numu disappearance and \nue appearance. 
 
@@ -157,41 +157,41 @@ The energy binning schemes used are the same across each of the three detectors,
 
 The \numu edge-to-edge binning has 21 bins in reconstructed neutrino energy which are bounded as follows:
 \begin{itemize}
-    \item 1 bin from 0.00-0.20 GeV,
-    \item 2 0.10-GeV bins from 0.20-0.40 GeV,
-    \item 12 0.05-GeV bins from 0.40-1.00 GeV,
-    \item 2 0.25-GeV bins from 1.00-1.50 GeV,
-    \item 3 0.50-GeV bins from 1.50-3.00 GeV and
-    \item 1 bin from 3.00-10.00 GeV.
+    \item One bin from 0.00 -- 0.20 GeV,
+    \item Two 0.10 GeV bins from 0.20 -- 0.40 GeV,
+    \item Twelve 0.05 GeV bins from 0.40 -- 1.00 GeV,
+    \item Two 0.25 GeV bins from 1.00 -- 1.50 GeV,
+    \item Three 0.50 GeV bins from 1.50 -- 3.00 GeV and
+    \item One bin from 3.00 -- 10.00 GeV.
 \end{itemize}
 
 The \numu edge-to-edge binning has 22 bins in true neutrino energy which are bounded as follows:
 \begin{itemize}
-    \item 1 bin from 0.00-0.30 GeV,
-    \item 3 0.10-GeV bins from 0.30-0.60 GeV,
-    \item 12 0.05-GeV bins from 0.60-1.20 GeV,
-    \item 1 bin from 1.20-1.50 GeV,
-    \item 3 0.50-GeV bins from 1.50-3.00 GeV,
-    \item 1 bin from 3.00-5.00 GeV and
-    \item 1 bin from 5.00-10.00 GeV.
+    \item One bin from 0.00 -- 0.30 GeV,
+    \item Three 0.10 GeV bins from 0.30 -- 0.60 GeV,
+    \item Twelve 0.05 GeV bins from 0.60 -- 1.20 GeV,
+    \item One bin from 1.20 -- 1.50 GeV,
+    \item Three 0.50 GeV bins from 1.50 -- 3.00 GeV,
+    \item One bin from 3.00 -- 5.00 GeV and
+    \item One bin from 5.00 -- 10.00 GeV.
 \end{itemize}
 
 The \nue edge-to-edge binning has 12 bins in reconstructed neutrino energy which are bounded as follows:
 \begin{itemize}
-    \item 1 0.35-GeV bin from 0.00-0.35 GeV,
-    \item 5 0.15-GeV bins from 0.35-1.10 GeV,
-    \item 2 0.20-GeV bins from 1.10-1.50 GeV,
-    \item 2 0.25-GeV bins from 1.50-2.00 GeV,
-    \item 1 bin from 2.00-3.00 GeV and
-    \item 1 bin from 3.00-10.00 GeV.
+    \item One bin from 0.00 -- 0.35 GeV,
+    \item Five 0.15 GeV bins from 0.35 -- 1.10 GeV,
+    \item Two 0.20 GeV bins from 1.10 -- 1.50 GeV,
+    \item Two 0.25 GeV bins from 1.50 -- 2.00 GeV,
+    \item One bin from 2.00 -- 3.00 GeV and
+    \item One bin from 3.00 -- 10.00 GeV.
 \end{itemize}
 
 The \nue edge-to-edge binning has 33 bins in true neutrino energy which are bounded as follows:
 \begin{itemize}
-    \item 2 0.25-GeV bin from 0.00-0.50 GeV,
-    \item 15 0.05-GeV bins from 0.50-1.25 GeV,
-    \item 15 0.25-GeV bins from 1.25-5.00 GeV and
-    \item 1 bin from 5.00-10.00 GeV.
+    \item Two 0.25 GeV bin from 0.00 -- 0.50 GeV,
+    \item Fifteen 0.05 GeV bins from 0.50 -- 1.25 GeV,
+    \item Fifteen 0.25 GeV bins from 1.25 -- 5.00 GeV and
+    \item One bin from 5.00 -- 10.00 GeV.
 \end{itemize}
 
 \newpage
@@ -273,7 +273,7 @@ Many \textit{universes} are simulated, each with different weights associated wi
 
 Depending on whether a given systematic parameter is correlated or not, the way that it is processed within VALOR is done in two different ways. For the uncorrelated parameters, a set of associated response functions which represent the impact on the event rate that tweaking a given systematic parameter will have are constructed. For each parameter, individual response functions are constructed for each combination of \textit{d, b, s, m, r} and \textit{t}. Each response function is a 13-knot spline which nominally represents the change in event rate from parameter variations ranging from \mbox{[-3, +3]$\sigma$} in 0.5$\sigma$ intervals. The response functions are constructed by first identifying the 12 universes which have a variation closest to each of the non-zero $\sigma$ intervals and then taking the ratio of the event rate from the selected universe in a \mbox{2D (r, t)} bin to the nominal event rate in that bin. By definition there will be a knot at 0$\sigma$ with a response of 1, however, in most cases, the remaining 12 knots will not be exactly at 0.5$\sigma$ intervals. 
 
-For the case of correlated parameters, it is not straightforward to construct response functions as was done for the uncorrelated parameters because any variations will be due to multiple parameters. These parameters are instead represented by a covariance matrix. Matrices of this type, $\mathbf{C_{ij}}$, are constructed such that,
+For the case of correlated parameters, it is not straightforward to construct response functions as was done for the uncorrelated parameters because any variations will be due to multiple parameters. These parameters are instead represented by a covariance matrix. Matrices of this type, $\mathbf{C_{ij}}$, are constructed in true parameter space such that,
 \begin{equation}
   \mathbf{C_{ij}} = \frac{1}{U} \sum_{u=1}^{U} (N_{i}^{u}-N_{i}^{cv})(N_{j}^{u}-N_{j}^{cv}),
   \label{eq:covmatrix}
@@ -313,15 +313,18 @@ As an example, the $+1\sigma$ variation for the $f_{HornCurrent}$, $f_{M_A^{CCRe
     \begin{tikzpicture}
     \node at (0,0) {\includegraphics[width = 0.45\textwidth, height = 0.56184\textwidth]{figures-chap6/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_flux_uncorr.pdf}};
     \draw [fill=white, draw=white] (-2.5,3)--(1,3)--(1,3.5)--(-2.5,3.5)--cycle;
+    \draw(-1.5,3) node {Flux};
     \end{tikzpicture}
     %\includegraphics[width = 0.49\textwidth, height = 0.56184\textwidth]{figures-chap6/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_flux_uncorr.pdf}
     \begin{tikzpicture}
     \node at (0,0) {\includegraphics[width = 0.45\textwidth, height = 0.56184\textwidth]{figures-chap6/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_proposal_xsec.pdf}};
-     \draw [fill=white, draw=white] (-2.5,3)--(1,3)--(1,3.5)--(-2.5,3.5)--cycle;
+    \draw [fill=white, draw=white] (-2.5,3)--(1,3)--(1,3.5)--(-2.5,3.5)--cycle;
+    \draw(-0,3) node {Proposal Interaction};
     \end{tikzpicture}
     \begin{tikzpicture}
     \node at (0,0) {\includegraphics[width = 0.45\textwidth, height = 0.56184\textwidth]{figures-chap6/tweak_pdf_N_nue/universe_valor_double_ratios_SBND_modern_xsec.pdf}};
-     \draw [fill=white, draw=white] (-2.5,3)--(1,3)--(1,3.5)--(-2.5,3.5)--cycle;
+    \draw [fill=white, draw=white] (-2.5,3)--(1,3)--(1,3.5)--(-2.5,3.5)--cycle;
+    \draw(-0,3) node {Modern Interaction};
     \end{tikzpicture}
     \vspace{0.1\textwidth}
   \captionsetup{width=0.45\textwidth}
@@ -335,7 +338,7 @@ As an example, the $+1\sigma$ variation for the $f_{HornCurrent}$, $f_{M_A^{CCRe
 \clearpage
 \subsection{SBN Contour Construction}\label{sec:sensitivites_construction}
 
-The relevant phase space for each of the three analysis channels considered is split into a $40 \times 40$ grid. This number was chosen in order to find a balance between having sufficient granularity when constructing contours without having excessive computing times. The dimensions of the phase space considered are different for each analysis channel and are listed in \TableRef{table:analysis_channel_phase_space}. Fits are performed for each of the $40 \times 40$ points where the oscillation parameters are fixed and the systematic parameters, if any, are allowed to float up to $\pm5\sigma$ from their nominal value. Once the fits have been produced, a contour of constant $\chi^2$ is constructed. The $\chi^2$ value is chosen such that it corresponds to a certain confidence level, \textit{CL}, which for \gls{sbn} analyses is typically 5$\sigma$. The critical value of $\chi^2$, $\chi^2_{critical}$, corresponding to a 5$\sigma$ confidence level along with a number of other $\chi^2_{critical}$ values with their associated confidence levels which are commonly seen in literature are outlined in \TableRef{table:critical_chi2_values}. An example of a 2D $\chi^2$ surface with exclusion contours at 90\%, 3$\sigma$ and 5$\sigma$ confidence levels for the \nue appearance channel is shown in \FigureRef{fig:nue_app_chisq_surface}. The contours have been produced for the entire \gls{sbn} program with the inclusion of flux and interaction systematics.
+The relevant phase space for each of the three analysis channels considered is split into a $40 \times 40$ grid. This number was chosen in order to find a balance between having sufficient granularity when constructing contours without having excessive computing times. The dimensions of the phase space considered are different for each analysis channel and are listed in \TableRef{table:analysis_channel_phase_space}. Fits are performed for each of the $40 \times 40$ points where the oscillation parameters are fixed and the systematic parameters, if any, are allowed to float up to $\pm5\sigma$ from their nominal value. Once the fits have been produced, a contour of constant $\chi^2$ is constructed. The $\chi^2$ value is chosen such that it corresponds to a certain confidence level, \textit{CL}, which for \gls{sbn} analyses is typically 5$\sigma$. The critical value of $\chi^2$, $\chi^2_{critical}$, corresponding to a 5$\sigma$ confidence level along with a number of other $\chi^2_{critical}$ values with their associated confidence levels which are commonly seen in literature are outlined in \TableRef{table:critical_chi2_values}. The confidence levels and $\chi^2_{critical}$ are related via $CL = \int_0^{\chi^2_{critical}} \frac{e^{-x/2}x^{u/2-1}}{2^{u/2}\Gamma(u/2)} dx$, where \textit{u} is the degrees of freedom (in this case 1) and $\Gamma$ is the Gamma function \cite{critical_chi2_book}. An example of a 2D $\chi^2$ surface with exclusion contours at 90\%, 3$\sigma$ and 5$\sigma$ confidence levels for the \nue appearance channel is shown in \FigureRef{fig:nue_app_chisq_surface}. The contours have been produced for the entire \gls{sbn} program with the inclusion of flux and interaction systematics.
 
 \begin{table}[h!]
 \begin{tabular}{lcc}
@@ -354,7 +357,7 @@ The relevant phase space for each of the three analysis channels considered is s
  Confidence level & 68\% & 90\% & 95\% & 99\% & 3$\sigma$ & 5$\sigma$ \\ \hline
 $\chi^2_{critical}$ & 0.23 & 1.64 & 2.71 & 5.41 & 7.74 & 23.66
 \end{tabular}
-\caption[$\chi^2_{critical}$ values for various confidence levels.]{The $\chi^2_{critical}$ values corresponding to various confidence levels which are commonly used when performing sensitivity studies. The confidence levels and $\chi^2_{critical}$ are related via $CL = \int_0^{\chi^2_{critical}} \frac{e^{-x/2}x^{u/2-1}}{2^{u/2}\Gamma(u/2)} dx$, where \textit{u} is the degrees of freedom (in this case 1) and $\Gamma$ is the Gamma function \cite{critical_chi2_book}.}
+\caption[$\chi^2_{critical}$ values for various confidence levels.]{The $\chi^2_{critical}$ values corresponding to various confidence levels which are commonly used when performing sensitivity studies.}
 \label{table:critical_chi2_values}
 \end{table}
 
@@ -374,7 +377,7 @@ Impact of systematics
 Size of Signal
 \end{comment}
 
-In order to perform sensitivity calculations, the events are required to be binned in terms of a kinematical variable, which is chosen to be the neutrino energy.
+In order to perform sensitivity calculations, the events are required to be binned in terms of a kinematical variable, which is chosen to be the reconstructed neutrino energy.
 
 The nominal event rates, event rates with an uncertainty envelope due to systematic uncertainties and the event rates due to an oscillation signal are discussed below for each \gls{sbn} detector. Additionally, the impact of the uncorrelated systematic parameters are quantified in terms of their effect on the oscillation parameters.
 
@@ -750,8 +753,8 @@ The impact of the $f_{M_V^{CCRes}}$, $f_{M_A^{CCRes}}$, $f_{R_N^{C Ex}}$ and $f_
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = 0.49\textwidth]{figures-chap6/exclusion_contours/single_param/nue_app_single_param.pdf}
-    \includegraphics[width =0.49\textwidth]{figures-chap6/exclusion_contours/single_param/nue_app_single_param_ratio.pdf}
+    \includegraphics[width = 0.49\textwidth, height = 0.45\textwidth]{figures-chap6/exclusion_contours/single_param/nue_app_single_param.pdf}
+    \includegraphics[width =0.49\textwidth, height = 0.45\textwidth]{figures-chap6/exclusion_contours/single_param/nue_app_single_param_ratio.pdf}
     \caption[\nue appearance exclusion contours with the inclusion of a single systematic parameter at a time.]{Left: \nue appearance exclusion contours with the inclusion of a single systematic parameter at a time. The systematic parameters considered are $f_{M_V^{CCRes}}$, $f_{M_A^{CCRes}}$, $f_{R_N^{C Ex}}$ and $f_{\sigma^{\pi}_{INEL}}$. Right: The ratio of the exclusion contours with the inclusion of a single systematic parameter to the statistical-only contour.}
     \label{fig:nue_app_single_param}
 \end{figure}
@@ -841,7 +844,7 @@ where $C_{ij}$ represents the correlation between the off-diagonal elements and 
   \end{cases}
 \end{equation}
 with $\sigma_i^{\prime}$ again being a percentage error. 
-If any correlated errors are assumed to by fully correlated, $\mathcal{M}_{ij}$ will then have diagonal elements given by $\sigma_i^2 + \sigma_i^{\prime2}$ and off-diagonal elements given by $\sigma_i^2$.
+If any correlated errors are assumed to be fully correlated, $\mathcal{M}_{ij}$ will then have diagonal elements given by $\sigma_i^2 + \sigma_i^{\prime2}$ and off-diagonal elements given by $\sigma_i^2$.
 
 \begin{table}[h!]
 \begin{adjustbox}{width=\textwidth,center}
@@ -881,7 +884,7 @@ All future discussion involving correlated uncertainties should from here on be 
 \end{figure}
 
 \newpage
-In order to get a measure of the possible impact of efficiency systematics on the sensitivity, various covariance matrices were produced were produced to investigate the impact of:
+In order to get a measure of the possible impact of efficiency systematics on the sensitivity, various covariance matrices were produced to investigate the impact of:
 \begin{enumerate}
     \item Fully correlated errors only.
     \item Various combinations of uncorrelated errors with a fixed correlated error.
@@ -938,7 +941,7 @@ In each case, the uncorrelated uncertainty for the bins of interest are set to 2
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap6/exclusion_contours/efficiency_systematics/nue_app_2pct_cor_05pct_bulk_2pct_X_uncor.pdf}
-    \caption[\nue appearance with poorly constrained efficiency systematic for a set of bins.]{The impact on the \nue appearance exclusion sensitivity by applying a 2\% fully correlated efficiency uncertainty for each of the \gls{sbn} detectors and a 0.5\% uncorrelated uncertainty for all but a single set of bins where the uncorrelated uncertainty is set to 2\%. The 'peak' energy bins are defined as those covering an energy range of [0.6,~1.0] GeV. The 'high' and 'low' energy bins are defined as those covering energies above and below the peak energy respectively and the 'bkg' bins are all the bins associated with background events. The set of bins of interest are applied to each of the three detectors.}
+    \caption[\nue appearance with poorly constrained efficiency systematic for a set of bins.]{The impact on the \nue appearance exclusion sensitivity by applying a 2\% fully correlated efficiency uncertainty for each of the \gls{sbn} detectors and a 0.5\% uncorrelated uncertainty for all but a single set of bins where the uncorrelated uncertainty is set to 2\%. The `peak' energy bins are defined as those covering an energy range of [0.6,~1.0] GeV. The `high' and `low' energy bins are defined as those covering energies above and below the peak energy respectively and the `bkg' bins are all the bins associated with background events. The set of bins of interest are applied to each of the three detectors.}
     \label{fig:nue_app_bulk_uncertainty}
 \end{figure}
 
@@ -978,7 +981,7 @@ Finally, the impact of having a set of poorly constrained bins is investigated i
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap6/exclusion_contours/efficiency_systematics/nue_disapp_2pct_cor_05pct_bulk_2pct_X_uncor.pdf}
-    \caption[\nue disapp with poorly constrained efficiency systematic for a set of bins.]{The impact on the \nue disappearance exclusion sensitivity by applying a 2\% fully correlated efficiency uncertainty for each of the \gls{sbn} detectors and a 0.5\% uncorrelated uncertainty for all but a single set of bins where the uncorrelated uncertainty is set to 2\%. The 'peak' energy bins are defined as those covering an energy range of [0.6,~1.0] GeV. The 'high' and 'low' energy bins are defined as those covering energies above and below the peak energy respectively and the 'bkg' bins are all the bins associated with background events. The set of bins of interest are applied to each of the three detectors.}
+    \caption[\nue disapp with poorly constrained efficiency systematic for a set of bins.]{The impact on the \nue disappearance exclusion sensitivity by applying a 2\% fully correlated efficiency uncertainty for each of the \gls{sbn} detectors and a 0.5\% uncorrelated uncertainty for all but a single set of bins where the uncorrelated uncertainty is set to 2\%. The `peak' energy bins are defined as those covering an energy range of [0.6,~1.0] GeV. The `high' and `low' energy bins are defined as those covering energies above and below the peak energy respectively and the `bkg' bins are all the bins associated with background events. The set of bins of interest are applied to each of the three detectors.}
     \label{fig:nue_disapp_bulk_uncertainty}
 \end{figure}
 
